# swe-code-agent

./: .gitignore  README.md  pyproject.toml
benchmarks/: fake_tasks.jsonl
docs/: CONTINUE_PROMPT.md  HANDOFF.md
examples/: fake_task.json  swebench_lite_task.json
reports/: annotation_calibration.html  data_quality_report.html  dpo_browser.html  index.html  progress.html  project_overview.html  review_ui.html  training_dashboard.html
scripts/: annotate_review.sh  auto_label_runs.sh  build_fake_data.sh  build_official_v02.sh  build_qwen_eval_set.sh  build_review_queue.sh  build_sft_mix.sh  check_docker.sh  download_swebench_lite.sh  enrich_swebench_run_tasks.sh  import_public_sft.sh  prepare_swebench_images.sh  recover_mini_runs.sh  run_dpo_smoke.sh  run_fake.sh  run_fake_batch.sh  run_mini_smoke.sh  run_official_eval.sh  run_sft_lora.sh  run_sft_smoke.sh  select_swebench_tasks.sh  serve_progress.sh  serve_review_ui.sh
swetrace/: __init__.py
swetrace/adapters/: __init__.py  base.py  fake.py  mini_swe_agent.py
tests/: test_batch_and_data_builder.py  test_build_data_cli.py  test_eval_set_builder.py  test_export_filtered_dpo.py  test_export_official_v02.py  test_fake_adapter_cli.py  test_metrics.py  test_mini_swe_agent_adapter.py  test_public_sft_importer.py  test_reports_pages.py  test_review_server.py  test_rule_labeler.py  test_run_mini_smoke_script.py  test_run_store.py  test_schema.py  test_sft_lora_training.py  test_swebench_official_eval.py  test_swebench_pipeline_clis.py  test_training_mix_builder.py  test_training_smoke.py  test_training_snapshot.py
(+49 files in other folders)
