[project]
name = "swe-trace"
version = "0.1.0"
description = "Trajectory collection, failure diagnosis, and post-training data builders for code agents."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
